<resources>
    <string name="app_name">instituto SQL</string>
    <string name="titulo">Bienvenido al instituto</string>
    <string name="altaAlumno">Alta Alumno</string>
    <string name="verAlumnos">Ver Alumnos</string>
    <string name="altaProfesor">Alta Profesor</string>
    <string name="verProfesores">Ver Profesores</string>
    <string name="altaAsignatura">Alta Asignatura</string>
    <string name="verAsignaturas">Ver Asignaturas</string>
    <string name="Bmatricular">matricular</string>

    <string name="tituloAltaAlumno">Alta Alumno</string>
    <string name="labelCursoAlumno">Curso:</string>
    <string name="labelEdadAlumno">Edad:</string>
    <string name="labelDNIAlumno">DNI:</string>
    <string name="labelNombreAlumno">Nombre:</string>

    <string name="tituloAltaProfesor">Alta Profesor</string>
    <string name="labelEdadProfesor">Edad:</string>
    <string name="labelDNIProfesor">DNI:</string>
    <string name="labelNombreProfesor">Nombre:</string>

    <string name="tituloAltaAsignatura">Alta Asignatura</string>
    <string name="labelLibro">Libro:</string>
    <string name="labelNombreAsignatura">Nombre:</string>
    <string name="labelProfesor">DNI profesor:</string>

    <string name="insertNombre"></string>
    <string name="insertCurso"></string>
    <string name="insertEdad"></string>
    <string name="insertDNI"></string>
    <string name="insertLibro"></string>
    <string name="insertProfesor"></string>

    <string name="aceptar">Aceptar</string>
    <string name="salir">Salir</string>

    <string name="vistaDNI">dni</string>
    <string name="vistaNombre">nombre</string>
    <string name="vistaEdad">edad</string>
    <string name="vistaCurso">curso</string>
    <string name="vistaLibro">libro</string>
    <string name="vistaProfesor">profesor</string>
    <string name="vistaObligatoria">Obligatoria</string>

    <string name="tituloMatricular">Matricular</string>
    <string name="labelDNIAlumnoMatricular">DNI Alumno</string>
    <string name="labelNombreAsignaturaMatricular">Asignatura:</string>
    <string name="vistaVer">Detalle</string>
    <string name="vistaAlumnoNombre">nombre</string>
    <string name="vistaAlumnoDNI">DNI</string>
    <string name="vistaAlumnoEdad">Edad</string>
    <string name="vistaAlumnoCurso">Curso</string>
    <string name="Bexaminar">Examinar</string>

    <string name="tituloExaminar">Examinar</string>
    <string name="labelDNIAlumnoExaminar">DNI Alumno:</string>
    <string name="labelNombreAsignaturaExaminar">Asignatura:</string>
    <string name="labelNota">Nota:</string>
    <string name="labelFecha">Fecha:</string>
    <string name="insertNota"></string>
    <string name="insertFecha"></string>
    <string name="titAsig">Asignaturas:</string>
    <string name="titExam">Examenes:</string>
    <string name="BaltaCurso">alta curso</string>
    <string name="BverCursos">Ver Cursos</string>
    <string name="title_activity_ver_alumnos2">verAlumnos2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vistaNotaMedia">Nota Media</string>
    <string name="vistaCalificacion">calificacion</string>
    <string name="vistaFecha">Fecha</string>
    <string name="vistaNota">Nota</string>


</resources>
