<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altaProfesor">

    <TextView
        android:id="@+id/labelEdadProfesor"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/labelEdadProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDNIProfesor" />

    <TextView
        android:id="@+id/labelDNIProfesor"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/labelDNIProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombre" />

    <TextView
        android:id="@+id/tituloAltaProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tituloAltaProfesor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAltaProfesor" />

    <EditText
        android:id="@+id/insertNombre"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insertNombre"
        android:inputType="textPersonName"
        android:text="@string/insertNombre"
        app:layout_constraintStart_toEndOf="@+id/labelNombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/insertNombre" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/labelNombreProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aceptarAltaProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:onClick="aceptar"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/salirAltaProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:onClick="salir"
        android:text="@string/salir"
        app:layout_constraintStart_toEndOf="@+id/aceptarAltaProfesor"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insertEdadProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insertEdad"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/labelEdadProfesor"
        app:layout_constraintTop_toBottomOf="@+id/insertDNI" />

    <EditText
        android:id="@+id/insertDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insertDNI"
        android:inputType="textPersonName"
        android:text="@string/insertDNI"
        app:layout_constraintStart_toEndOf="@+id/labelDNIProfesor"
        app:layout_constraintTop_toBottomOf="@+id/insertNombre" />
</androidx.constraintlayout.widget.ConstraintLayout>