<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/verAsignaturas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="verAsignaturas"
        android:text="@string/verAsignaturas"
        app:layout_constraintStart_toEndOf="@+id/altaAsignatura"
        app:layout_constraintTop_toBottomOf="@+id/verProfesores" />

    <Button
        android:id="@+id/altaAsignatura"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="altaAsignatura"
        android:text="@string/altaAsignatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altaProfesor" />

    <Button
        android:id="@+id/verProfesores"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="verProfesores"
        android:text="@string/verProfesores"
        app:layout_constraintStart_toEndOf="@+id/altaProfesor"
        app:layout_constraintTop_toBottomOf="@+id/verAlumnos" />

    <TextView
        android:id="@+id/tituloAltaAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAltaAlumno" />

    <Button
        android:id="@+id/altaAlumno"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:onClick="altaAlumno"
        android:text="@string/altaAlumno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/verAlumnos"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:onClick="verAlumnos"
        android:text="@string/verAlumnos"
        app:layout_constraintStart_toEndOf="@+id/altaAlumno"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/altaProfesor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:onClick="altaProfesor"
        android:text="@string/altaProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altaAlumno" />

</androidx.constraintlayout.widget.ConstraintLayout>