<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginTop="15dp"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vistaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vistaNombre" />

        <TextView
            android:id="@+id/vistaEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vistaEdad" />

        <TextView
            android:id="@+id/vistaDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vistaDNI" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</RelativeLayout>